<resources>
    <string name="app_name">SmartLock</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="product_key">Product Key</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="smart_lock">Smart Lock</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="dashes">_______________</string>
    <string name="or">OR</string>
    <string name="title_activity_admin_bottom_nav">AdminBottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="waqas_ahmad">Waqas Ahmad</string>
    <string name="_03004626618">03004626618</string>
    <string name="waqas7788">waqas7788</string>
    <string name="example_gmail_com">Example@gmail.com</string>
    <string name="p_o_box_sargodha">P.O.Box Sargodha</string>

    <string-array name="type_string">

        <item>Barcode</item>
        <item>PDF 417</item>
        <item>Barcode-39</item>
        <item>Barcode-93</item>
    </string-array>
    <string name="type_prompt">Select Type</string>

</resources>
