<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgd"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/trb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/smart_lock"
            android:textColor="#45b55c"
            android:textSize="24dp"
             />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:drawablePadding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_man_user"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:textColor="#000"
                        android:drawableStart="@drawable/ic_man_user"
                        android:autofillHints="Waqas Ahmad" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:drawablePadding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/email"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:autofillHints="example@gmail.com"
                        android:drawableStart="@drawable/email" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:drawablePadding="10dp"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/lock"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/lock"
                        android:autofillHints="@string/password" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:drawablePadding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_show_password"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_show_password"
                        android:autofillHints="@string/password" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:drawablePadding="10dp"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_barcode_tag"
                        android:hint="@string/product_key"
                        android:inputType="text"
                        android:autofillHints="165n4534vtum3"
                        android:drawableStart="@drawable/ic_barcode_tag" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:drawablePadding="10dp"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_phone_book"
                        android:hint="@string/contact_number"
                        android:inputType="number"
                        android:textColor="#45b55c"
                        android:drawableStart="@drawable/ic_phone_book"
                        android:autofillHints="030046745638" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:drawablePadding="10dp"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_agenda"
                        android:hint="@string/address"
                        android:inputType="text"
                        android:drawableStart="@drawable/ic_agenda"
                        android:autofillHints="Sargodha" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_back"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18dp"
                     />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>