<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffff"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bgd"
            android:orientation="vertical">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/trb" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/smart_lock"
                android:textColor="#45b55c"
                android:textSize="24dp"
                />



            <LinearLayout
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/UserNameET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autofillHints="Waqas Ahmad"
                        android:drawableStart="@drawable/ic_man_user"
                        android:drawableLeft="@drawable/ic_man_user"
                        android:drawablePadding="10dp"
                        android:hint="@string/user_name"
                        android:inputType="text"
                        android:textColor="#000" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/EmailET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autofillHints="example@gmail.com"
                        android:drawableStart="@drawable/email"
                        android:drawableLeft="@drawable/email"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/PasswordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autofillHints="@string/password"
                        android:drawableStart="@drawable/lock"
                        android:drawableLeft="@drawable/lock"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/CPasswordET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autofillHints="@string/password"
                        android:drawableStart="@drawable/ic_show_password"
                        android:drawableLeft="@drawable/ic_show_password"
                        android:drawablePadding="10dp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/PhoneET"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autofillHints="030046745638"
                        android:drawableStart="@drawable/ic_phone_book"
                        android:drawableLeft="@drawable/ic_phone_book"
                        android:drawablePadding="10dp"
                        android:hint="@string/contact_number"
                        android:inputType="number"
                        android:textColor="#45b55c" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/AddressET"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:autofillHints="Sargodha"
                        android:drawableStart="@drawable/ic_agenda"
                        android:drawableLeft="@drawable/ic_agenda"
                        android:drawablePadding="10dp"
                        android:hint="@string/address"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>
                <com.victor.loading.rotate.RotateLoading
                    android:id="@+id/rotateloading"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:loading_width="5dp"
                    app:loading_color="#4CAF50"
                    android:layout_centerInParent="true"/>
                <Button
                    android:id="@+id/RegsiterBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_back"
                    android:padding="10dp"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18dp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
